syntax = "proto3";

option go_package = "/pb";

package event;

message Event {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string time = 4;
  string timezone = 5;
  int32 duration = 6;
  repeated string notes = 7;
}

message ListRequest{
  string title = 1;
  string timezone = 2;
  string dateFrom = 3;
  string dateTo = 4;
  string timeFrom = 5;
  string timeTo = 6;
}

message ListResponse{
  repeated Event event = 1;
}

message CreateRequest{
  string title = 1;
  string description = 2;
  string time = 3;
  string timezone = 4;
  int32 duration = 5;
  repeated string notes = 6;
}

message CreateResponse{
  enum Status {
    Successful = 0;
    Failed = 1;
  };

  Status status = 1;
}

message GetRequest{
  int32 id = 1;
}

message GetResponse{
  Event event = 1;
}

message UpdateRequest{
  int32 id = 1;
  string title = 2;
  string description = 3;
  string time = 4;
  string timezone = 5;
  int32 duration = 6;
  repeated string notes = 7;
}

message UpdateResponse{
  enum Status {
    Successful = 0;
    Failed = 1;
  };

  Status status = 1;
}

message DeleteRequest{
  int32 id = 1;
}

message DeleteResponse{
  enum Status {
    Successful = 0;
    Failed = 1;
  };

  Status status = 1;
}

service EventService {
  rpc List (ListRequest) returns (ListResponse);
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc GetById (GetRequest) returns (GetResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}